# bak3d_rendering_demo_engine

./: .gitattributes.TXT  .gitignore  CMakeLists.txt  README.md  setup.py  sync_shaders.cmake  sync_shaders.py
Assets/Shaders/: 1.model_loading.fs  1.model_loading.vs  DissectShader.fs  DissectShader.vs  GridShader.fs  LightShader.vs  LineShader.fs  bufferShader.vs
assets/materials/: backpack_material.json  default_material.json  grid.json  light_icon.json  line.json  mushroom_material.json  particle.json
bak3d/: bak3d.vcxproj  imgui.ini  main.cpp
bak3d/editor/: editor.cpp  editor.h  imgui_b3d_extensions.cpp  imgui_b3d_extensions.h  user_interface.cpp  user_interface.h
bak3d/editor/Panel/: asset_viewer.cpp  asset_viewer.h  console.cpp  console.h  details.cpp  details.h  editor_panel.cpp  editor_panel.h  environment.cpp  environment.h  metrics.cpp  metrics.h  scene_graph.cpp  scene_graph.h  viewport.cpp  viewport.h
bak3d/engine/Asset/: asset.h  asset_definitions.h  file_loader.cpp  file_loader.h  material.cpp  material.h  mesh.h  model.cpp  model.h  resource_manager.cpp  resource_manager.h  resource_map.h  shader.cpp  shader.h  texture.cpp  texture.h
bak3d/engine/Core/: Engine.cpp  Engine.h  bak3d_object.h  global_definitions.h  global_settings.cpp  global_settings.h  logger.cpp  logger.h  renderable.h
bak3d/engine/Input/: event_manager.cpp  event_manager.h  renderdoc_manager.cpp  renderdoc_manager.h
bak3d/engine/Loader/: asset.h  file_loader.cpp  file_loader.h  resource_manager.cpp  resource_manager.h
bak3d/engine/Renderer/: buffer.cpp  buffer.h  globject.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_data.h  post_process_pass.cpp  post_process_pass.h  post_processor.cpp  post_processor.h  primitive_mesh_data.h  renderer.cpp  renderer.h  renderer_pass.cpp  renderer_pass.h  renderer_passes.cpp  renderer_passes.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
bak3d/engine/Scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  scene_object.h
bak3d/engine/Scene/Objects/: axis.cpp  axis.h  bounding_box.cpp  bounding_box.h  camera.cpp  camera.h  grid.cpp  grid.h  light.cpp  light.h  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  particle_generator.cpp  particle_generator.h  renderable_object.cpp  renderable_object.h  transform.h
bak3d/engine/Scene/Objects/Particle/: particle_definitions.h  particle_emitter.cpp  particle_emitter.h  particle_system.cpp  particle_system.h
lib/FreeImage-3170/Source/OpenEXR/IlmImf/: ImfAutoArray.h
lib/assimp/lib/: assimp-vc143-mtd.exp
lib/glad/: glad.h
lib/glew-2.1.0/: glew.pc
shaders/: BlurKernelShader.frag  Common.glsl  Common_Global.glsl  DissectShader.frag  DissectShader.vert  GridShader.vert  KernelEffectShader.frag  LightShader.vert  LineShader.vert  MainShader.vert  ModelShader.vert  ParticleShader.vert  PostProcessingShader.frag  PostProcessingShader.vert
shaders/Fragment/: ColorGradingShader.frag  ModelShader.frag  grid.frag  light_caster.frag  particle.frag
shaders/Vertex/: DissectShader.vert  GridShader.vert  LightShader.vert  LineShader.vert  ModelShader.vert  particle.vert
src/3D Model Viewer/: 3D Model Viewer.sln.DotSettings
src/3D Model Viewer/3D Model Viewer/: 3D Model Viewer.cpp  3D Model Viewer.vcxproj  3D Model Viewer.vcxproj.filters  imgui.ini  main.cpp
src/3D Model Viewer/3D Model Viewer/include/: OBJloader.h  axis.cpp  axis.h  camera.h  grid.h  light.h  mesh.h  model.h  object.h  renderer.h  scene.h
src/3D Model Viewer/3D Model Viewer/include/Tools/: OBJloader.h  shader.h  stb_image.h
src/3D Model Viewer/3D Model Viewer/shaders/: ModelShader.fs  ModelShader.vs  bufferShader.fs  bufferShader.vs
src/3D Model Viewer/3D Model Viewer/src/: camera.cpp  event_manager.cpp  event_manager.h  grid.cpp  light.cpp  mesh.cpp  model.cpp  object.cpp  renderer.cpp  scene.cpp
src/3D Model Viewer/3D Model Viewer/src/Tools/: glad.c  shader.cpp
src/bak3d_rendering_demo_engine/: 3D Model Viewer.sln
src/bak3d_rendering_demo_engine/3D Model Viewer/: 3D Model Viewer.vcxproj  3D Model Viewer.vcxproj.filters  imgui.ini  main.cpp
src/bak3d_rendering_demo_engine/3D Model Viewer/assets/mushroom/: mushroom.mtl
src/bak3d_rendering_demo_engine/3D Model Viewer/include/: axis.cpp  axis.h  bounding_box.h  camera.h  event_manager.h  grid.h  light.h  mesh.h  model.h  object.h  particle_generator.h  renderer.h  resource_manager.h  scene.h  user_interface.h
src/bak3d_rendering_demo_engine/3D Model Viewer/include/Tools/: asset.h  buffer.h  file_loader.h  globject.h  material.h  mesh_data.h  primitive_mesh_data.h  shader.h  texture.h  transform.h  vertex_array.h
src/bak3d_rendering_demo_engine/3D Model Viewer/shaders/: DissectShader.vs  GridShader.fs  GridShader.vs  LightShader.frag  LightShader.fs  LineShader.fs  LineShader.vert  LineShader.vs  MainShader.fs  MainShader.vert  MainShader.vs  ModelShader.frag  ModelShader.fs  ModelShader.vs  ParticleShader.fs  ParticleShader.vert  ParticleShader.vs
src/bak3d_rendering_demo_engine/3D Model Viewer/src/: axis.cpp  bounding_box.cpp  event_manager.cpp  event_manager.h  grid.cpp  light.cpp  mesh.cpp  model.cpp  object.cpp  particle_generator.cpp  renderer.cpp  resource_manager.cpp  scene.cpp  texture.cpp  user_interface.cpp
src/bak3d_rendering_demo_engine/3D Model Viewer/src/Tools/: buffer.cpp  file_loader.cpp  material.cpp  primitive_mesh_data.h  shader.cpp  texture.cpp  vertex_array.cpp
